.applier/files/omp-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omp-frontend
  name: omp-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: omp-frontend
  sessionAffinity: None
  type: ClusterIP
