.applier/files/omp-frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: omp-frontend
  name: omp-frontend
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: omp-frontend
    weight: 100
  wildcardPolicy: None
